--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_tuijiankehu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_tuijiankehu.xml
@@ -32,9 +32,10 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="17"
             android:background="@color/qianhui"
-            android:padding="10dp"
+            android:padding="5dp"
             >
             <TextView
+                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -42,6 +43,7 @@
                 android:textSize="18sp"
                 />
             <ImageView
+                android:paddingRight="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
