--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_me_weijiexiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_me_weijiexiangqing.xml
@@ -339,7 +339,7 @@
                             <ImageView
                                 android:layout_alignParentRight="true"
                                 android:layout_marginRight="10dp"
-                                android:src="@drawable/ic_launcher_background"
+                                android:src="@drawable/nocommission"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content" />
                         </RelativeLayout>
@@ -407,11 +407,11 @@
         android:id="@+id/tv_cuiyong"
         android:gravity="center"
         android:background="@color/liji_material_blue_500"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:text="催佣"
         android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="0.8"/>
 
 </LinearLayout>
