--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
@@ -65,7 +65,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/chunbai"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -78,10 +77,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             >
-            <ImageView
-                android:src="@drawable/downarrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
 
             <TextView
                 android:id="@+id/content_need"
@@ -92,6 +88,10 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="需求类型" />
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <Spinner
                 android:visibility="gone"
@@ -112,10 +112,7 @@
             android:gravity="center"
             android:orientation="horizontal"
             >
-            <ImageView
-                android:src="@drawable/downarrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
 
             <TextView
                 android:id="@+id/content_price"
@@ -126,6 +123,10 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="意向区域" />
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <Spinner
                 android:visibility="gone"
@@ -145,10 +146,7 @@
             android:gravity="center"
             android:orientation="horizontal"
            >
-            <ImageView
-                android:src="@drawable/downarrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
 
             <TextView
                 android:id="@+id/content_intent"
@@ -159,6 +157,10 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="意向度" />
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <Spinner
                 android:visibility="gone"
@@ -179,10 +181,7 @@
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:src="@drawable/downarrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
             <TextView
                 android:id="@+id/content_more"
                 android:layout_width="0dp"
@@ -192,6 +191,10 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:text="紧迫度" />
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <Spinner
                 android:visibility="gone"
@@ -215,7 +218,10 @@
 
     
 
-
+<LinearLayout
+    android:background="@color/bgcolcor"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <com.scwang.smartrefresh.layout.SmartRefreshLayout
     android:id="@+id/customers_swiperefreshlayout"
     android:layout_width="match_parent"
@@ -249,7 +255,7 @@
 
 
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
+</LinearLayout>
 
 
 </LinearLayout>
