--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_me_weijieyongjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_me_weijieyongjin.xml
@@ -98,10 +98,10 @@
                 />
         </LinearLayout>
 
-            <TextView
+            <ImageView
+                android:src="@drawable/cuiyong"
                 android:layout_alignParentRight="true"
                 android:id="@+id/tv_cuiyong"
-                android:text="催拥"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
