--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_me_workjingli.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_me_workjingli.xml
@@ -18,24 +18,26 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:textColor="@color/miantext"
+                android:textSize="20sp"
+                android:text="12313"
+                android:id="@+id/tv_companyname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
     <TextView
+        android:textColor="@color/shenlan"
+        android:textSize="17sp"
+        android:layout_marginTop="10dp"
         android:id="@+id/me_workjingli_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2018_07_13至2018_07_13"/>
 
-            <TextView
-                android:layout_marginLeft="15dp"
-                android:text="12313"
-                android:ellipsize="end"
-                android:maxEms="10"
-                android:singleLine="true"
-                android:id="@+id/tv_companyname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
         </LinearLayout>
 
         <RelativeLayout
