--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_complain.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_complain.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/chunbai">
 
     <LinearLayout
         android:id="@+id/work_button_linearlayout_申诉条目1"
@@ -24,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="张三"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/miantext"
                     android:textSize="17sp"
                     />
 
@@ -54,7 +55,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="推荐编号："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
 
@@ -63,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1234567890"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
@@ -93,7 +94,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="推荐项目："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
 
@@ -102,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="云算公馆"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
             </LinearLayout>
@@ -145,7 +146,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="推荐日期："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
 
@@ -154,7 +155,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2017-12-12"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
@@ -170,7 +171,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="申诉日期："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp" />
 
                     <TextView
@@ -178,7 +179,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2017-12-12"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp" />
 
                 </LinearLayout>
