--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_deal_disable.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_deal_disable.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/chunbai">
 
     <LinearLayout
         android:id="@+id/work_button_linearlayout_申诉条目1"
@@ -24,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="张三"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/miantext"
                     android:textSize="17sp"
                     />
 
@@ -53,7 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="推荐编号："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
 
@@ -62,7 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1234567890"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
@@ -93,7 +94,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="推荐项目："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
 
@@ -102,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="云算公馆"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
             </LinearLayout>
@@ -118,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="推荐日期："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/text"
                     android:textSize="13sp"
                     />
                 <TextView
@@ -151,7 +152,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="失效日期："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/text"
                         android:textSize="13sp"
                         />
 
