--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_deal_valid.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_work_deal_valid.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/chunbai">
     <LinearLayout
         android:id="@+id/work_button_linearlayout_申诉条目1"
         android:layout_width="match_parent"
@@ -23,7 +24,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="张三"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/miantext"
                     android:textSize="17sp"
                     />
 
@@ -52,7 +53,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="推荐编号："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
 
@@ -61,7 +62,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1234567890"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
@@ -91,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="推荐项目："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
 
@@ -100,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="云算公馆"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
             </LinearLayout>
@@ -149,7 +150,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="成交日期："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/text"
                         android:textSize="13sp"
                         />
 
@@ -158,7 +159,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2017-12-12"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/text"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
