--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_huxingxiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_huxingxiangqing.xml
@@ -29,9 +29,10 @@
             android:text="户型详情"
             android:textAlignment="center"
             android:textColor="@color/chunhei"
-            android:textSize="20sp"
+            android:textSize="16sp"
             />
         <ImageButton
+            android:visibility="gone"
             android:id="@+id/house_button_分享"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -68,10 +69,13 @@
                 </android.support.v4.view.ViewPager>
 
                 <android.support.design.widget.TabLayout
+                    android:background="#50000000"
                     android:layout_gravity="bottom"
                     android:id="@+id/tl_tablaout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:tabTextColor="@android:color/white"
+                    app:tabSelectedTextColor="@android:color/holo_blue_dark"
                     />
 
                 <LinearLayout
