--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_xiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_xiangqing.xml
@@ -14,6 +14,7 @@
         >
 
         <ImageButton
+            android:paddingRight="30dp"
             android:id="@+id/house_button_返回"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
