--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
@@ -31,7 +31,7 @@
             android:layout_centerInParent="true"
             android:text="确认中详情"
             android:textColor="@color/chunhei"
-            android:textSize="20sp"
+            android:textSize="16sp"
             />
     </RelativeLayout>
     <ImageView
@@ -99,8 +99,8 @@
             >
             <TextView
                 android:id="@+id/date_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/shape_button"
                 android:gravity="center"
                 android:padding="10dp"
@@ -119,8 +119,8 @@
                 />
             <TextView
                 android:id="@+id/date_hour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/shape_button"
                 android:gravity="center"
                 android:padding="10dp"
@@ -140,8 +140,8 @@
                 />
             <TextView
                 android:id="@+id/date_minute"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/shape_button"
                 android:gravity="center"
                 android:padding="10dp"
@@ -161,8 +161,8 @@
                 />
             <TextView
                 android:id="@+id/date_seconds"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/shape_button"
                 android:gravity="center"
                 android:padding="10dp"
