--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_verify_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_verify_details.xml
@@ -25,7 +25,7 @@
             android:layout_centerInParent="true"
             android:text="待确认详情"
             android:textColor="@color/chunhei"
-            android:textSize="20sp"
+            android:textSize="16sp"
             />
     </RelativeLayout>
     <ImageView
@@ -105,9 +105,9 @@
                     >
                     <TextView
                         android:id="@+id/date_day"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/juse"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/shape_button"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="2天"
@@ -119,13 +119,14 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text=":"
+                        android:textColor="@color/juse"
                         android:textSize="30dp"
                         />
                     <TextView
                         android:id="@+id/date_hour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/juse"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/shape_button"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="23"
@@ -139,12 +140,13 @@
                         android:gravity="center"
                         android:text=":"
                         android:textSize="30dp"
+                        android:textColor="@color/juse"
                         />
                     <TextView
                         android:id="@+id/date_minute"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/juse"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/shape_button"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="23"
@@ -158,12 +160,13 @@
                         android:gravity="center"
                         android:text=":"
                         android:textSize="30dp"
+                        android:textColor="@color/juse"
                         />
                     <TextView
                         android:id="@+id/date_seconds"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/juse"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/shape_button"
                         android:gravity="center"
                         android:padding="10dp"
                         android:text="23"
