--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_ss.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_ss.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:orientation="vertical"
+    android:background="@color/bgcolcor"
     >
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/mSwipRefresh"
