--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/item_work_recom.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/item_work_recom.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/chunbai"
     >
     <LinearLayout
         android:id="@+id/work_button_linearlayout_申诉条目1"
@@ -24,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="张三"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/miantext"
                     android:textSize="17sp"
                     />
 
@@ -46,7 +47,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="推荐编号："
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
 
@@ -55,7 +56,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1234567890"
-                        android:textColor="@color/chunhei"
+                        android:textColor="@color/futext"
                         android:textSize="13sp"
                         />
                 </LinearLayout>
@@ -75,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="推荐项目："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
 
@@ -84,7 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="云算公馆"
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
             </LinearLayout>
@@ -102,7 +103,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="失效时间："
-                    android:textColor="@color/chunhei"
+                    android:textColor="@color/futext"
                     android:textSize="13sp"
                     />
 
@@ -132,6 +133,7 @@
                     >
                     <TextView
                         android:id="@+id/address"
+                        android:textColor="@color/text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="地址"
@@ -142,7 +144,13 @@
             </RelativeLayout>
 
         </LinearLayout>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#d2d6da"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            ></View>
 
     </LinearLayout>
 </LinearLayout>
