--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/view_process.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/view_process.xml
@@ -26,6 +26,7 @@
         android:textSize="13sp" />
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
