--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_more_activity.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_more_activity.xml
@@ -17,6 +17,10 @@
         android:text="学区房"
         android:textColor="@color/chunhei"
         android:layout_width="80dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+
+        />
+
+
 
 </LinearLayout>
