--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
@@ -31,7 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingRight="10dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <RelativeLayout
 
@@ -44,7 +46,7 @@
                 android:paddingLeft="10dp"
                 android:id="@+id/et_search"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                 android:hint="请输入姓名/手机号"
                 android:background="@null"
