--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/project_item_tupian.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/project_item_tupian.xml
@@ -4,12 +4,26 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <android.support.v4.view.ViewPager
         android:id="@+id/im_viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </android.support.v4.view.ViewPager>
+
+
+    <ImageView
+        android:id="@+id/a3D"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:src="@drawable/a3d"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <RelativeLayout
         android:padding="20dp"
