--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
@@ -54,8 +54,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="8.5"
+            android:layout_weight="7"
             android:background="@color/qianhui"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             >
             <EditText
                 android:padding="5dp"
@@ -76,6 +78,44 @@
                 android:src="@drawable/ic_search2"
                 />
         </RelativeLayout>
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:orientation="horizontal"
+            android:weightSum="10"
+            >
+            <TextView
+                android:gravity="center_vertical"
+                android:id="@+id/house_text_housetype"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:ellipsize="end"
+                android:maxEms="2"
+                android:singleLine="true"
+                android:text="新房"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                />
+            <ImageView
+                android:visibility="gone"
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/house_spinner_housetype"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.5"
+                android:dropDownVerticalOffset="35dp"
+                android:dropDownWidth="1080px"
+                android:entries="@array/需求类型"
+                android:visibility="gone"
+                >
+            </Spinner>
+        </LinearLayout>
 
     </LinearLayout>
 
