--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/empty_layout.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/empty_layout.xml
@@ -3,11 +3,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    >
 
    <!--数据为空时展示该页面-->
    <TextView
-       android:text="暂无数据"
+       android:layout_gravity="center"
+       android:text="已经到底了"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 
