--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
@@ -70,6 +70,7 @@
 
     </LinearLayout>
 
+    <!--失效倒计时-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
