--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_qrz.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work_tuijian_qrz.xml
@@ -8,7 +8,6 @@
     >
 
 
-
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/mSwipRefresh"
             android:layout_width="match_parent"
@@ -34,7 +33,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/work_recyclerview_verify"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             >
         </android.support.v7.widget.RecyclerView>
             <com.scwang.smartrefresh.layout.footer.ClassicsFooter
