--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_prospect_finish_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_prospect_finish_details.xml
@@ -64,6 +64,7 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_fangyuanxinxi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
