--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_prospect_verfy_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_work_second_prospect_verfy_details.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
         android:paddingRight="15dp"
         >
         <ImageButton
@@ -29,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="有效详情"
+            android:text="待确认详情"
             android:textColor="@color/chunhei"
             android:textSize="16sp"
             />
