--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_linkman.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_linkman.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgcolcor"
     android:orientation="vertical">
     <LinearLayout
+        android:background="@color/chunbai"
         android:id="@+id/ll_pipeikehu1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,10 +30,17 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:layout_margin="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:text="联系人："
+                            android:textSize="13sp" />
                         <TextView
                             android:id="@+id/tv_name1"
                             android:layout_width="wrap_content"
@@ -62,14 +71,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:text="意向总价："
+                            android:text="类型："
                             android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/tv_zongjia1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="xx-xx万"
+                            android:text="业主—主权益人"
                             android:textSize="13sp" />
 
                     </LinearLayout>
@@ -85,19 +94,20 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="5dp"
-                            android:text="意向户型："
+                            android:text="联系电话："
                             android:textSize="13sp" />
 
                         <TextView
                             android:id="@+id/tv_huxin1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="x室x厅x卫"
+                            android:text="15928666180"
                             android:textSize="13sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="5dp"
@@ -138,13 +148,15 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/tv_chakanquanbu"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginRight="10dp"
-                            android:text="匹配度："
+                            android:text="查看全部>>"
                             android:textSize="13sp" />
 
                         <TextView
+                            android:visibility="gone"
                             android:textColor="@color/liji_material_blue_500"
                             android:id="@+id/tv_pepeidu"
                             android:layout_width="wrap_content"
@@ -164,5 +176,190 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_line"></ImageView>
+
+
+    <LinearLayout
+        android:background="@color/chunbai"
+        android:id="@+id/ll_pipeikehu2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:visibility="visible">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:text="联系人："
+                            android:textSize="13sp" />
+                        <TextView
+                            android:id="@+id/tv_name2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:paddingRight="3dp"
+                            android:text="张三"
+                            android:textSize="15sp" />
+
+                        <ImageView
+                            android:id="@+id/im_sex2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            />
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:text="类型："
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:id="@+id/tv_zongjia2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="业主"
+                            android:textSize="13sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:text="联系电话："
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:id="@+id/tv_huxin2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="15928777180"
+                            android:textSize="13sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="5dp"
+                            android:text="意向区域："
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:id="@+id/tv_quyu2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="xx区-xx大道"
+                            android:textSize="13sp" />
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tv_chakanquanbu2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:text="查看全部>>"
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:visibility="gone"
+                            android:textColor="@color/liji_material_blue_500"
+                            android:id="@+id/tv_pepeidu2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0%"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_line"></ImageView>
+
+    <LinearLayout
+        android:padding="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="添加联系人"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
