--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
@@ -108,6 +108,7 @@
         </LinearLayout>
         <!--意向区域-->
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
