--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_wodeyongjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_wodeyongjin.xml
@@ -163,6 +163,61 @@
 
     </LinearLayout>
 
+    <!--奖励-->
+    <LinearLayout
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/ll_yaoqingjiangli"
+            android:background="@drawable/blue2"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="18sp"
+                android:text="邀请奖励"
+                android:textColor="@color/chunbai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                android:text="20"
+                android:textColor="@color/chunbai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/orange2"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textSize="18sp"
+                android:text="其他奖励"
+                android:textColor="@color/chunbai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                android:text="20"
+                android:textColor="@color/chunbai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
