--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/fragment_work.xml
@@ -327,6 +327,11 @@
         android:layout_height="1dp"
         android:background="@drawable/ic_line"
         />
+            <LinearLayout
+                android:visibility="gone"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -1253,7 +1258,7 @@
                     />
 
             </RelativeLayout>
-
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
