--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
@@ -80,6 +80,7 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -238,6 +239,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
