--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_log_in.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_log_in.xml
@@ -128,6 +128,7 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
